tdf#125164 sw: reimplement SwUndoTOXChange

SwUndoTOXChange was effectively dead code since commit
60732d715698108f9c3a8284bb3e00baaa4e8124 "#i42807# clear undo stack
before changing of TOX properties, update TOX after changing properties"
and was resurrected by commit 4f0b568ef35353b276ae560fb43502b6f6b2bfdb.

* Calling Update() from Undo is wrong, as there is no guarantee that
  the index was up-to-date before the change
* Calling Update() from Redo is pointless, as there will be a Redo
  of SwUndoUpdateIndex anyway, given that the only caller of
  ChangeTOX, namely, SwTOXMgr::UpdateOrInsertTOX(), does that
* SwUndoTOXChange cannot retain a pointer to SwTOXBase as its life-time
  is tied to the SwSectionNode
* Repeat applying the same attributes to the same ToX is utterly
  pointless

Change-Id: I84a9de3176d1062d1a43acbc9270c547fde7936a